# codingTest/storage/api-docs/api-docs.json
@@ -13,38 +13,127 @@
         "version": "1.0.0"
     },
     "paths": {
-        "/": {
+        "/api/candidate": {
             "get": {
                 "tags": [
                     "Candidate"
                 ],
                 "summary": "All",
                 "description": "All",
+                "operationId": "a882f76bf0dc6f54110ae3e795bc3ea1",
                 "responses": {
                     "default": {
                         "description": "All Data"
                     }
                 }
-            }
-        },
-        "/candidate": {
+            },
             "post": {
                 "tags": [
                     "Candidate"
                 ],
                 "summary": "Add",
                 "description": "Add",
-                "operationId": "9ecb221cf433b8e349f9c42fed065521",
+                "operationId": "802092967319f2d98a55b7a4596f5e0a",
                 "parameters": [
                     {
                         "name": "name",
                         "in": "query",
-                        "description": "Add Candidate",
+                        "description": "Full Name",
                         "required": true,
                         "schema": {
                             "type": "string"
                         },
                         "example": "Julle"
+                    },
+                    {
+                        "name": "education",
+                        "in": "query",
+                        "description": "Education",
+                        "required": true,
+                        "schema": {
+                            "type": "string"
+                        },
+                        "example": "AMIKOM"
+                    },
+                    {
+                        "name": "birthday",
+                        "in": "query",
+                        "description": "Birthday",
+                        "required": true,
+                        "schema": {
+                            "type": "string"
+                        },
+                        "example": "1995-05-03"
+                    },
+                    {
+                        "name": "experience",
+                        "in": "query",
+                        "description": "Experience",
+                        "required": true,
+                        "schema": {
+                            "type": "string"
+                        },
+                        "example": "6"
+                    },
+                    {
+                        "name": "lastPosition",
+                        "in": "query",
+                        "description": "Last Position",
+                        "required": true,
+                        "schema": {
+                            "type": "string"
+                        },
+                        "example": "Freelance"
+                    },
+                    {
+                        "name": "appliedPosition",
+                        "in": "query",
+                        "description": "Applied Position",
+                        "required": true,
+                        "schema": {
+                            "type": "string"
+                        },
+                        "example": "PHP Fullstack"
+                    },
+                    {
+                        "name": "top5",
+                        "in": "query",
+                        "description": "Top 5 Skill",
+                        "required": true,
+                        "schema": {
+                            "type": "string"
+                        },
+                        "example": "PHP,Laravel"
+                    },
+                    {
+                        "name": "email",
+                        "in": "query",
+                        "description": "Email",
+                        "required": true,
+                        "schema": {
+                            "type": "string"
+                        },
+                        "example": "zul0342@gmail.com"
+                    },
+                    {
+                        "name": "phone",
+                        "in": "query",
+                        "description": "Phone Number",
+                        "required": true,
+                        "schema": {
+                            "type": "string"
+                        },
+                        "example": "082292299152"
+                    },
+                    {
+                        "name": "resume",
+                        "in": "query",
+                        "description": "Resume",
+                        "required": true,
+                        "schema": {
+                            "type": "string"
+                        },
+                        "example": "uploaded-resume/CV.pdf"
                     }
                 ],
                 "responses": {
@@ -54,18 +143,43 @@
                 }
             }
         },
-        "/candidate/{id}": {
+        "/api/candidate/{id}": {
             "get": {
                 "tags": [
                     "Candidate"
                 ],
                 "summary": "Show",
                 "description": "Show",
-                "operationId": "e78919f034bb69d4ba7d00b37ca7c327",
+                "operationId": "569ac7c4a4d62db86e3ee625d93b7f73",
                 "parameters": [
                     {
                         "name": "id",
-                        "in": "query",
+                        "in": "path",
+                        "description": "candidate id",
+                        "required": true,
+                        "schema": {
+                            "type": "integer"
+                        },
+                        "example": "1"
+                    }
+                ],
+                "responses": {
+                    "default": {
+                        "description": "Show page"
+                    }
+                }
+            },
+            "delete": {
+                "tags": [
+                    "Candidate"
+                ],
+                "summary": "Delete",
+                "description": "Delete",
+                "operationId": "c42b76651d461a6da9716e32d969b179",
+                "parameters": [
+                    {
+                        "name": "id",
+                        "in": "path",
                         "description": "candidate id",
                         "required": true,
                         "schema": {
